--- a/.github/workflows/psscriptanalyzer.yml
+++ b/.github/workflows/psscriptanalyzer.yml
@@ -1,6 +1,6 @@
 # https://github.com/devblackops/github-action-psscriptanalyzer
 name: CI
-on: push
+on: [pull_request]
 jobs:
   lint:
     name: Run PSSA
